--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start": "node ./backend/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install": "npm install && cd backend && npm install && cd .."
   },
   "eslintConfig": {
     "extends": [
