--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   },
   "scripts": {
     "start": "node ./backend/index.js",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cd backend && npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "install": "npm install && cd backend && npm install && cd .."
+    "install": "npm install"
   },
   "eslintConfig": {
     "extends": [
